[package]
name = "migrate-matrix"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/tilosp/migrate-matrix"
description = "A tool to migrate Matrix accounts between servers"

[dependencies]
anyhow = "1.0.94"
dialoguer = "0.11.0"
matrix-sdk = { version = "0.13.0", features = ["sso-login"] }
tempfile = "3.14.0"
tokio = { version = "1.42.0", features = ["full"] }
tokio-stream = "0.1"
rand = "0.8.5"
